# PyDevDTK

./: .flake8  .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: documentation.yml  python-package.yml  release.yml
docs/: coms.rst  conf.py  examples.rst  index.html  index.rst  plots.rst
examples/: ble_example.py  plotter_base_demo.py  plotter_demo.py  serial_example.py
main/: .buildinfo  coms.html  examples.html  genindex.html  index.html  objects.inv  plotting.html  py-modindex.html  search.html
main/.doctrees/: coms.doctree  environment.pickle  examples.doctree  index.doctree  plotting.doctree
main/_modules/: index.html
main/_modules/pydevdtk/coms/: ble.html  serial.html
main/_modules/pydevdtk/plotting/: plotter.html  plotter_base.html  plotter_manager.html
requirements/: all.txt  build.txt  default.txt  dev.txt  doc.txt
src/pydevdtk/: __init__.py
src/pydevdtk/coms/: __init__.py  ble.py  serial.py
src/pydevdtk/plotting/: __init__.py  plotter.py  plotter_base.py  plotter_manager.py
v0.1.0/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.1.0/.doctrees/: api.doctree  environment.pickle  index.doctree
v0.1.0/_modules/: index.html
v0.1.0/_modules/pydevdtk/coms/: ble.html  serial.html
v0.1.0/_modules/pydevdtk/plotting/: plotter.html  plotter_base.html  plotter_manager.html
v0.1.0/_sources/: api.rst.txt
v0.1.1/: .buildinfo  coms.html  examples.html  genindex.html  index.html  plotting.html  py-modindex.html  search.html  searchindex.js
v0.1.1/.doctrees/: coms.doctree  environment.pickle  examples.doctree  index.doctree  plotting.doctree
v0.1.1/_modules/: index.html
v0.1.1/_sources/: index.rst.txt  plotting.rst.txt
(+5 files in other folders)
