[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "hatch-vcs"
]
[project]
name = "PyDevDTK"
authors = [
    { name="Bojan Sofronievski", email="bojan.drago@gmail.com" },
]
description = "Python device development toolkit"
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.23.3",
    "matplotlib>=3.5.2"
]

[project.urls]
"Homepage" = "https://github.com/BojanSof/pydevdtk"
"Bug Tracker" = "https://github.com/BojanSof/pydevdtk/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pydevdtk/version.py"

[tool.hatch.build]
artifacts = [
  "src/pydevdtk/version.py",
]

[tool.hatch.build.targets.sdist]
exclude = [
  ".github"
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"